--- a/index.css
+++ b/index.css
@@ -93,7 +93,10 @@ nav {
 }
 
 /* ----------------------------------------- ABOUT ME --------------------------------------- */
-
+.my-img{
+  width: 350px; 
+  height: 350px;
+}
 
 /* ----------------------------------------- POJECT --------------------------------------- */
 .card{
@@ -418,8 +421,25 @@ form:hover::before {
 }
 
 /* ------------------------------ CONTACT ------------------------------ */
-@media only screen and (max-width: 360px) {
-  .con-wrapper {
-    flex-direction: column;
+@media only screen and (max-width: 400px) {
+  #contact_me>.flex-row {
+    flex-direction: column!important;
   }
+  .con-left,.con-right {
+    width: 80%;
+    margin: auto;
+    height: 50vh;
+  }
+  .con-right{
+    height: 70vh;
+
+  }
+  .my-img{
+    width: 100%;
+    height: 350px;
+  }
+  form {
+    width: 100%;
+  }
+
 }
